Implement true breakend scoring, fix bug in breakend filtering, improve toString